@@ -1,3 +1,9 @@
+/*
+ * Modified for use with MPlayer, for details see the CVS changelog at
+ * http://www.mplayerhq.hu/cgi-bin/cvsweb.cgi/main/
+ * $Id$
+ */
+
 /* 
  * Mpeg Layer-2 audio decoder 
  * --------------------------
